--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^8.48.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.0",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
