--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "@types/node": "^20.5.7",
     "@types/react-router-dom": "^5.3.3",
+    "date-fns": "^2.30.0",
     "eslint": "^8.48.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
